# arkiv-op-reth

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  foundry.toml  justfile
.cargo/: config.toml
.fd-agent/: agent-bootstrap.sh  fd-agent.md
.fdagent/: setup.sh
.github/actions/build-storaged/: action.yml
.github/actions/install-foundry/: action.yml
.github/actions/prepare-docker-context/: action.yml
.github/actions/setup-rust-builder/: action.yml
.github/actions/setup-rust-ubuntu/: action.yml
.github/scripts/: packages.py
.github/workflows/: ci-custom.yml  ci-e2e.yml  ci.yml  copilot-setup-steps.yml  docker-action-fast.yml  docker-action-full-arm.yml  docker-action-full-x86.yml  docker-action-full.yml  docker-merge-manifests.yml  fmt_and_clippy.yml  list-packages.yml  release.yml
chainspec/: dev.base.json
compose/: .gitignore  bootstrap-contracts.sh  docker-compose-dev-separated.yml  docker-compose-dev.yml  docker-compose-separated.yml  docker-compose.yml
contracts/: README.md  foundry.toml
contracts/artifacts/: EntityRegistry.runtime.hex
contracts/src/: EntityRegistry.sol
crates/arkiv-cli/: Cargo.toml
crates/arkiv-cli/src/: main.rs  simulate.rs
crates/arkiv-entitydb/: Cargo.toml
crates/arkiv-entitydb/src/: lib.rs  query.rs
crates/arkiv-entitydb/src/query/: interpreter.rs  lexer.rs  parser.rs
crates/arkiv-entitydb/tests/: query_eval.rs
crates/arkiv-genesis/: Cargo.toml
crates/arkiv-genesis/src/: deploy.rs  lib.rs
crates/arkiv-node/: Cargo.toml
crates/arkiv-node/src/: cli.rs  evm.rs  exex.rs  genesis.rs  install.rs  lib.rs  main.rs  precompile.rs  rpc.rs  storaged.rs
crates/arkiv-node/src/query/: mod.rs  parser.rs
crates/arkiv-node/src/storage/: entity.rs  jsonrpc.rs  logging.rs  mod.rs  rocks.rs  rocksdb_store.rs
crates/arkiv-store/: Cargo.toml
crates/arkiv-store/src/: jsonrpc.rs  lib.rs  logging.rs
demo/: justfile
demo/fixtures/: 01-create.json
docker/: dev-entrypoint.sh  runtime-dev.Dockerfile  runtime.Dockerfile
docs/: architecture.md  custom-precompile.md  exex-jsonrpc-interface-v2.md  exex-jsonrpc-interface.md  off-the-process-db-feasibility-analysis-op.md  precompile-out-of-band-coupling.md  range-query-proposal.md  reth-implementation-status-2026-04-20.md  statedb-design.md  verifiable-indexing-tradeoff.md
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: full_pipeline_e2e.rs  precompile_e2e.rs  query_rpc_e2e.rs
precompiles/: README.md  foundry.toml  run.sh
precompiles/contracts/: PrecompileCaller.sol
script/: CreateSampleEntity.s.sol
scripts/: demo_entitydb.py  mock-entitydb.js
scripts/fixtures/: attributes-all-types.json  double-op-same-entity.json
storaged/: ref.txt
