[workspace]
members = ["crates/arkiv-node", "crates/arkiv-cli", "crates/arkiv-genesis"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arkiv Contributors <dev@arkiv.network>"]
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-or-later"
description = "Workspace for Arkiv Op-Reth integration"
repository = "https://github.com/Arkiv-Network/arkiv-op-reth"
readme = "README.md"
keywords = ["ethereum", "reth", "optimism", "arkiv"]

[workspace.dependencies]
# Op-Reth (from ethereum-optimism monorepo)
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism.git", branch = "develop" }
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism.git", branch = "develop" }
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism.git", branch = "develop" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism.git", branch = "develop" }

# Reth (pinned to same rev as op-reth)
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "552d896f9c4b75201def55969d3c23bcc990dd80" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "552d896f9c4b75201def55969d3c23bcc990dd80" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "552d896f9c4b75201def55969d3c23bcc990dd80" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "552d896f9c4b75201def55969d3c23bcc990dd80" }

# Arkiv bindings (from arkiv-contracts repo)
arkiv-bindings = { git = "https://github.com/Arkiv-Network/arkiv-contracts.git", rev = "ff30cab" }

# Arkiv genesis primitives (in-tree)
arkiv-genesis = { path = "crates/arkiv-genesis" }

# Alloy
alloy-primitives = "1.5"
alloy-consensus = "2.0"
alloy-genesis = "2.0"
alloy-sol-types = "1.5"
alloy-provider = "2.0"
alloy-signer-local = { version = "2.0", features = ["mnemonic"] }
alloy-network = "2.0"
alloy-contract = "2.0"
alloy-rpc-types = "2.0"

# EVM
revm = { version = "36.0.0", default-features = false, features = ["std"] }

# Util
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

