[workspace]
members = ["crates/arkiv-node", "crates/arkiv-cli", "crates/arkiv-genesis"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arkiv Contributors <dev@arkiv.network>"]
edition = "2024"
rust-version = "1.94"
license = "GPL-3.0-or-later"
description = "Workspace for Arkiv Op-Reth integration"
repository = "https://github.com/Arkiv-Network/arkiv-op-reth"
readme = "README.md"
keywords = ["ethereum", "reth", "optimism", "arkiv"]

[workspace.dependencies]
# Op-Reth (from ethereum-optimism monorepo, pinned to op-reth/v2.2.0)
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0" }
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0" }
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0" }

# Reth (pinned to same rev as op-reth/v2.2.0)
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }
reth-primitives-traits = "0.3"
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "27bfddeada3953edc22759080a3659ccea62ca1f" }

# Arkiv bindings (from arkiv-contracts repo)
arkiv-bindings = { git = "https://github.com/Arkiv-Network/arkiv-contracts.git", rev = "d4bf0d59" }

# Arkiv genesis primitives (in-tree)
arkiv-genesis = { path = "crates/arkiv-genesis" }

# Alloy
alloy-primitives = "1.5"
alloy-consensus = "2.0"
alloy-genesis = "2.0"
alloy-sol-types = "1.5"
alloy-provider = "2.0"
alloy-signer-local = { version = "2.0", features = ["mnemonic"] }
alloy-network = "2.0"
alloy-contract = "2.0"
alloy-rpc-types = "2.0"
alloy-rpc-types-engine = "2.0"
alloy-rpc-types-eth = "2.0"
alloy-eips = "2.0"
alloy-hardforks = "0.4"

# EVM. Pinned to `38.0.0` to match what `alloy-op-evm` / `op-revm` /
# `revm-precompile 34` pull in transitively. Earlier this workspace had
# `revm = "36.0.0"` (used only by `arkiv-genesis`), which silently
# produced parallel `revm 36` and `revm 38` graphs and meant types from
# the two were incompatible. Keeping a single version simplifies the
# precompile wiring — see `docs/custom-precompile.md` §9.E.
revm = { version = "38.0.0", default-features = false, features = ["std"] }

# Custom-precompile wiring (POC).
# alloy-op-evm must come from the optimism git tag, not crates.io, so its
# `revm 38` line aligns with op-revm/op-reth.
alloy-evm = { version = "0.33", default-features = false, features = ["std"] }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0", default-features = false, features = ["std"] }
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0", default-features = false, features = ["std"] }
op-revm = { git = "https://github.com/ethereum-optimism/optimism.git", tag = "op-reth/v2.2.0", default-features = false, features = ["std"] }
revm-precompile = { version = "34", default-features = false, features = ["std"] }

# Util
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.26", features = ["server", "macros"] }

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

