[package]
name = "arkiv-genesis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "print-genesis"
path = "src/bin/print_genesis.rs"

[dependencies]
arkiv-bindings.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
eyre.workspace = true
hex.workspace = true
serde_json.workspace = true
revm = { version = "36.0.0", default-features = false, features = ["std"] }
