[package]
name = "arkiv-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "arkiv-node"
path = "src/main.rs"

[dependencies]
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true

reth-exex.workspace = true
reth-node-api.workspace = true
reth-execution-types.workspace = true
reth-storage-api.workspace = true

arkiv-bindings.workspace = true
arkiv-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true

clap.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
