[package]
name = "arkiv-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "arkiv-node"
path = "src/main.rs"

[dependencies]
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true

reth-node-builder.workspace = true

arkiv-genesis.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-evm.workspace = true
revm.workspace = true

clap.workspace = true
eyre.workspace = true
tracing.workspace = true
