[package]
name = "arkiv-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "arkiv-node"
path = "src/main.rs"

[dependencies]
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true

reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-evm.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true

arkiv-genesis.workspace = true
arkiv-entitydb.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-evm.workspace = true
alloy-op-evm.workspace = true
op-alloy-consensus.workspace = true
op-revm.workspace = true
revm.workspace = true
revm-precompile.workspace = true

async-trait.workspace = true
clap.workspace = true
eyre.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
