[package]
name = "arkiv-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arkiv-bindings.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-consensus.workspace = true
alloy-sol-types.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
